Start setting up main section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-4 col-md-6 mb-2"><button class="btn btn-primary rounded-pill"><i
-                  class="fab fa-android p-1"></i>Download for
+            <div class="col-12 col-sm-4 col-md-6 col-lg-5 mb-2 text-center"><button
+                class="btn btn-primary rounded-pill"><i class="fab fa-android p-1"></i>Download for
                 Android</button>
             </div>
-            <div class="col-12 col-sm-4 col-md-6 mb-2"><button class="btn btn-primary rounded-pill"><i
-                  class="fab fa-apple p-1"></i>Download for
+            <div class="col-12 col-sm-4 col-md-6 col-lg-5 mb-2 text-center"><button
+                class="btn btn-primary rounded-pill"><i class="fab fa-apple p-1"></i>Download for
                 Apple</button>
             </div>
           </div>
@@ -63,16 +63,40 @@
   </header>
 
   <main>
-    <div class="container-fluid">
+    <div class="container text-center">
       <div class="row">
-        <div class="col">
-          <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-          </div>
+        <div class="offset-3 col-6 p-5">
+          <h4>Features</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore doloremque debitis eligendi esse eos
+            temporibus</p>
         </div>
       </div>
-      <div class="row"></div>
+      <div class="row">
+        <div class="col-12 col-md-4 p-5 features-item">
+          <i class="fas fa-briefcase"></i>
+          <h5>Your jobs</h5>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+        </div>
+        <div class="col-12 col-md-4 p-5 features-item">
+          <i class="fas fa-book-open"></i>
+          <h5>Read news</h5>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+        </div>
+        <div class="col-12 col-md-4 p-5 features-item">
+          <i class="far fa-comment"></i>
+          <h5>News about jobs</h5>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
     </div>
   </main>
 
