Add content to main section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
           <div class="row">
             <div class="col">
               <h1>Your jobs, <b>our news.</b></h1>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis veniam corrupti, praesentium ratione
-                id numquam et accusantium eligendi, illum cum expedita sed corporis dolorem autem minus repudiandae
-                quia! Eveniet, distinctio!</p>
+              <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches
+                to corporate strategy foster collaborative thinking to further the overall value proposition.
+                Organically grow the holistic world view of disruptive innovation via workplace diversity and
+                empowerment.</p>
             </div>
           </div>
           <div class="row">
@@ -67,35 +68,49 @@
       <div class="row">
         <div class="offset-3 col-6 p-5">
           <h4>Features</h4>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore doloremque debitis eligendi esse eos
-            temporibus</p>
+          <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going
+            forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined
+            cloud solution./p>
         </div>
       </div>
-      <div class="row">
+      <div class="row pb-4">
         <div class="col-12 col-md-4 p-5 features-item">
           <i class="fas fa-briefcase"></i>
           <h5>Your jobs</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+          <p>User generated content in real-time will have multiple touchpoints for offshoring.</p>
         </div>
         <div class="col-12 col-md-4 p-5 features-item">
           <i class="fas fa-book-open"></i>
           <h5>Read news</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+          <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.</p>
         </div>
         <div class="col-12 col-md-4 p-5 features-item">
           <i class="far fa-comment"></i>
           <h5>News about jobs</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum accusamus sunt praesentium illo</p>
+          <p>Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom
+            line.</p>
+
         </div>
       </div>
     </div>
     </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
+    <div class="container-fluid main-2">
+      <div class="row no-gutters">
+        <div class="col main-2-video">
+          <video class="w-100 h-100 bg-secondary" autoplay>
+            <source src="typing.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="col main-2-info text-white">
+          <div class="wrapper">
+            <h1 class="pb-5">Podcasting operational change.</h1>
+            <p>Management inside of workflows to establish a framework. Taking seamless
+              key performance indicators offline to maximise the long tail. Keeping your eye on the ball while
+              performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
