--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row header-nav pt-5">
         <div class="offset-md-1 col-md-1">
           <!----LOGO---->
-          <h3>109Lead</h3>
+          <h3>CodeWorks</h3>
         </div>
         <div class="offset-md-7 col-md-3">
           <!----NAV LIST---->
@@ -97,13 +97,13 @@
     </div>
 
     <div class="container-fluid main-2">
-      <div class="row no-gutters">
-        <div class="col main-2-video">
-          <video class="w-100 h-100 bg-secondary" autoplay>
+      <div class="row">
+        <div class="col-12 col-md-6 main-2-video light-background">
+          <video class="light-background w-100 h-100" autoplay>
             <source src="typing.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="col main-2-info text-white">
+        <div class="col-12 col-md-6 main-2-info text-white">
           <div class="wrapper">
             <h1 class="pb-5">Podcasting operational change.</h1>
             <p>Management inside of workflows to establish a framework. Taking seamless
@@ -116,7 +116,29 @@
   </main>
 
   <footer>
-    <div class="container-fluid"></div>
+    <div class="container-fluid bg-dark text-white">
+      <div class="row pt-5">
+        <div class="col-12 col-md-4 text-center p-3">
+          <h5>CodeWorks</h5>
+          <p>Boise Codeworks<br>1444 S Entertainment Ave</p>
+        </div>
+        <div class="col-12 col-md-4 text-center p-5">
+          <i class="fab fa-android pr-1"></i>
+          <i class="fab fa-apple pl-1"></i>
+        </div>
+        <div class="col-12 col-md-4 text-center p-5">
+          <div class="row">
+            <div class="offset-5 col-1"><i class="fab fa-facebook-square"></i></div>
+            <div class="col-1"><i class="fab fa-twitter-square"></i></div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <p>Awards | Credits</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
 </body>
